Upgrade Java from 20 to 21